--- a/index.html
+++ b/index.html
@@ -132,9 +132,30 @@
             margin-left: auto;
             margin-right: auto;
         }
+        .footer {
+            text-align: center; 
+            padding: 10px; 
+            font-size: 14px; 
+            color: #666; 
+            background-color: #f9f9f9; 
+            margin-top: 20px; 
+            border-top: 1px solid #ddd; 
+        }
+
+        .footer a {
+            color: #007bff; 
+            text-decoration: none; 
+        }
+
+        .footer a:hover {
+            text-decoration: underline; 
+        }
 
     </style>
 </head>
+<footer class="footer">
+    <p>All data is sourced from <a href="https://data.gov.sg" target="_blank">data.gov.sg</a></p>
+</footer>
 <body>
 
 <div class="button-container">
