--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@
         }
 
         .description {
-            background: lightgray;
-            padding: 20px;
-            color: #000;
-            margin: 20px auto;
-            width: 80%;
-            text-align: center;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: url('https://raw.githubusercontent.com/PeaceWang110/test/main/%E6%B1%BD%E8%BD%A6%E5%A4%A7%E5%85%A8/Cars.jpeg') no-repeat center center; /* 设置背景图片 */
+            background-size: cover; /* 图片按比例缩放，填满整个框 */
+            padding: 200px 20px; /* 上下左右内边距 */
+            color: #fff; /* 文字颜色为白色，确保与背景对比清晰 */
+            margin: 0; /* 去掉外边距 */
+            width: 100%; /* 让背景框延伸到页面两端 */
+            max-width: none; /* 移除最大宽度限制 */
+            text-align: center; /* 文本居中 */
+            border-radius: 0; /* 移除圆角 */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
         }
 
         .button-container {
@@ -150,6 +152,10 @@
         .footer a:hover {
             text-decoration: underline; 
         }
+        .container {
+            max-width: 90%; /* 内容最大宽度占页面的90% */
+            margin: 0 auto; /* 水平居中 */
+        }
 
     </style>
 </head>
@@ -168,6 +174,7 @@
 
 <div class="dashboard">
     <div class="description" id="home">
+        <div class="container"></div>
         <h1>Number and Classification of Newly Registered Cars, 2016-2019</h1>
         <p>This section contains information about car registrations, classifications, and trends.</p>
     </div>
