--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         position: fixed; 
         bottom: 0; 
         width: 100%; 
-        text-align: center; 
-        background-color: #f9f9f9; 
+        text-align: right; 
+        background-color: rgba(249, 249, 249, 0.7); 
         padding: 10px 0; 
         font-size: 14px; 
         color: #666;
