--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@
             display: none;
             z-index: 1000;
         }
+        .description h1 {
+            font-size: 42px; 
+            font-weight: bold; 
+            margin-bottom: 20px; 
+        }
+
+        .description p {
+            font-size: 30px; 
+            line-height: 1.8; 
+        }
 
     </style>
 </head>
