--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 tooltip1.html(tooltipHtml)
                     .style("left", (event.pageX + 10) + "px")
                     .style("top", (event.pageY - 28) + "px")
-                    .style("display", "block");  // 显示 tooltip
+                    .style("display", "block");  
             })
             .on("mousemove", (event) => {
                 tooltip1.style("left", (event.pageX + 10) + "px")
